# Giz-Modular-Web-Portfolio

./: CMakeLists.txt  Main.qml  assets.qrc  main.cpp
qml/plugins/: BlogCards.qml  BoxIntroduction.qml  BoxIntroduction.qml.autosave  Header.qml  HeaderLetterBox.qml  HeaderMobileMenu.qml  ImageRounded.qml  ImageRounded.qml.autosave  PruebaMaster.qml  TechSkills.qml
src/: CMakeLists.txt  configcenter.cpp  configcenter.h  main.cpp  main2.cpp  storagemanager.cpp  storagemanager.h
src/abstractlistmodels/: blogcardmodel.cpp  blogcardmodel.h  techskillsprojects.cpp  techskillsprojects.h  techskillsprojects3dart.cpp  techskillsprojects3dart.h  techskillsprojects3dgraphics.cpp  techskillsprojects3dgraphics.h  techskillsprojectsUE.cpp  techskillsprojectsUE.h
src/utils/: jsonparsing.cpp  jsonparsing.h  networklayer.cpp  networklayer.h
